[add] iPhone SEを考慮。

--- a/css/style.css
+++ b/css/style.css
@@ -190,4 +190,12 @@ a { text-decoration:none; }
 
 }
 
+
+/*-------- 本文 --------*/
+.last-update-date {
+    
+    text-align: center;
+    
+}
+
 }
